<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>worhole_nav</name>
  <version>0.0.0</version>
  <description>Multi-map navigation using wormholes in ROS 2 Jazzy</description>

  <maintainer email="vermayash3205@gmail.com">Yash Verma</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Group membership for action interface generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

